Szachy... mozna sie ruszac wszystkim

--- a/Strony_Projekt/html3.html
+++ b/Strony_Projekt/html3.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./Style/StyleGenral/chess.css" />
     <link rel="stylesheet" href="./Style/style.css" />
     <script src="./Scritps/values.js" defer></script>
     <script src="./Scritps/applicationMenu.js" defer></script>
+
 </head>
 <body>
     <header class="header">
@@ -30,6 +32,12 @@
             </button>
           </li>
         </ul>
+        
       </header>
+
+      <script src="./Scritps/chess.js" defer></script>
+      <div id="chessboard"></div>
+      
+
 </body>
 </html>
